# gablog

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: main.yml
content/pages/blog/: anarchy-lane.md  che-bello.md  i-poeti-che-strane-creature.md  livelli-di-appartenenza.md  streik-mit-greta.md
content/pages/blog/1maggio/: insalata.md
content/pages/blog/25aprile/: ricordo-e-propaganda.md
content/pages/blog/an-actor-world/: an-actor-world.md
content/pages/blog/cava-santa-domenica/: cava-santa-domenica.md
content/pages/blog/desire-lines/: desire-lines.md
content/pages/blog/grammatica-funzionale/: grammatica-funzionale.md
content/pages/blog/rubare_oggi/: rubare_oggi.md
content/pages/blog/scelte-verdi/: scelte-verdi.md
content/pages/blog/torino_traffic/: torino-traffic.md
content/pages/blog/transit_gap/: main.md
drafts/: 2019-05-18-an-actor-world.md
src/: main.rs
static/css/: article.css
templates/: article.html  home.html
