[package]
name = "my_rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9"
tera = "1.19"
serde_json = "1.0"
chrono = "0.4" 
serde_yaml = "0.8"

[dev-dependencies]
tempfile = "3.2"